--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "plugin-zip": "wp-scripts plugin-zip"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.15",
         "@wordpress/scripts": "^26.12.0",
         "autoprefixer": "^10.4.16",
         "cssnano": "^6.0.1",
