--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vh-fullsite",
+    "name": "vh-starter-theme",
     "version": "0.1.0",
     "description": "Example block scaffolded with Create Block tool.",
     "author": "The WordPress Contributors",
